--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,17 +5,17 @@
 @tailwind utilities;
 @font-face {
   font-family: "Avenir";
-  src: url("../public/font/AvenirLTStd-Black.otf");
+  src: url("/public/font/AvenirLTStd-Black.otf");
   font-weight: 900;
 }
 @font-face {
   font-family: "Avenir";
-  src: url("../public/font/AvenirLTStd-Book.otf");
+  src: url("/public/font/AvenirLTStd-Book.otf");
   font-weight: 500;
 }
 @font-face {
   font-family: "Avenir";
-  src: url("../public/font/AvenirLTStd-Roman.otf");
+  src: url("/public/font/AvenirLTStd-Roman.otf");
   font-weight: 400;
 }
 * {
