--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,16 @@
   height: 52px !important;
   border: none !important;
 }
+
+.hide-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scroll {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 @media screen and (max-width: 1183px) {
   .slider li {
     display: flex;
